crates/pina_cli_renderer/src/snapshots/pina_cli_renderer____tests__custom_errors_program_cli.snap
---
source: crates/pina_cli_renderer/src/__tests.rs
expression: "snapshot_files(\"custom_errors_program\")"
---
==== Cargo.toml ====
[package]
name = "custom_errors_program_cli"
version = "0.1.0"
edition = "2021"
publish = false
description = "Generated CLI for customErrorsProgram"

[[bin]]
name = "custom-errors-program-cli"
path = "src/main.rs"

[dependencies]
bs58 = { workspace = true, default-features = true }
clap = { workspace = true, default-features = true, features = ["derive", "std", "env"] }
fixture-client = { path = "../../rust/fixture" }
serde_json = { workspace = true, default-features = true }
solana-rpc-client = { workspace = true, default-features = true }
solana-sdk = { workspace = true, default-features = true }
thiserror = { workspace = true, default-features = true }

==== README.md ====
# custom-errors-program-cli

Generated command-line interface for the `customErrorsProgram` program (version 0.0.0).

This crate was generated by `pina generate --client cli-rust`. Do not edit it
by hand; regenerate it instead.

## Usage

```sh
cargo run -p custom_errors_program_cli -- --help
cargo run -p custom_errors_program_cli -- <command> --help
```

Global flags:

- `-u, --url <URL>`: `mainnet`, `devnet`, `testnet`, `localhost`, or an https URL (`SOLANA_URL`)
- `-k, --keypair <PATH>`: payer keypair file (`PINA_KEYPAIR`, default `~/.config/solana/id.json`)
- `--program-id <ADDRESS>`: override the on-chain program address
- `--simulate`: simulate instead of sending
- `--json`: machine-readable output

==== src/commands/hello.rs ====
//! This code was AUTOGENERATED by `pina_cli_renderer`.
//! Please DO NOT EDIT THIS FILE directly.
//! Regenerate it from the program IDL instead.
#![allow(
	clippy::doc_lazy_continuation,
	clippy::empty_line_after_doc_comments,
	clippy::too_many_arguments
)]

use clap::Args;

use crate::context::CliContext;
use crate::context::CliError;
use fixture_client::instructions::Hello;
use fixture_client::instructions::HelloInstructionData;

#[derive(Debug, Args)]
pub struct HelloArgs {
}

pub(crate) fn run(context: &CliContext, args: HelloArgs) -> Result<(), CliError> {
	let data = HelloInstructionData::new(|_data| {})
	.map_err(|_| CliError::InvalidData {
		message: "instruction data rejected the provided arguments".to_string(),
	})?;

	let accounts = Hello {
	};

	context.send(accounts.instruction(data))
}

==== src/commands/hello_next.rs ====
//! This code was AUTOGENERATED by `pina_cli_renderer`.
//! Please DO NOT EDIT THIS FILE directly.
//! Regenerate it from the program IDL instead.
#![allow(
	clippy::doc_lazy_continuation,
	clippy::empty_line_after_doc_comments,
	clippy::too_many_arguments
)]

use clap::Args;

use crate::context::CliContext;
use crate::context::CliError;
use fixture_client::instructions::HelloNext;
use fixture_client::instructions::HelloNextInstructionData;

#[derive(Debug, Args)]
pub struct HelloNextArgs {
}

pub(crate) fn run(context: &CliContext, args: HelloNextArgs) -> Result<(), CliError> {
	let data = HelloNextInstructionData::new(|_data| {})
	.map_err(|_| CliError::InvalidData {
		message: "instruction data rejected the provided arguments".to_string(),
	})?;

	let accounts = HelloNext {
	};

	context.send(accounts.instruction(data))
}

==== src/commands/hello_no_msg.rs ====
//! This code was AUTOGENERATED by `pina_cli_renderer`.
//! Please DO NOT EDIT THIS FILE directly.
//! Regenerate it from the program IDL instead.
#![allow(
	clippy::doc_lazy_continuation,
	clippy::empty_line_after_doc_comments,
	clippy::too_many_arguments
)]

use clap::Args;

use crate::context::CliContext;
use crate::context::CliError;
use fixture_client::instructions::HelloNoMsg;
use fixture_client::instructions::HelloNoMsgInstructionData;

#[derive(Debug, Args)]
pub struct HelloNoMsgArgs {
}

pub(crate) fn run(context: &CliContext, args: HelloNoMsgArgs) -> Result<(), CliError> {
	let data = HelloNoMsgInstructionData::new(|_data| {})
	.map_err(|_| CliError::InvalidData {
		message: "instruction data rejected the provided arguments".to_string(),
	})?;

	let accounts = HelloNoMsg {
	};

	context.send(accounts.instruction(data))
}

==== src/commands/mod.rs ====
//! This code was AUTOGENERATED by `pina_cli_renderer`.
//! Please DO NOT EDIT THIS FILE directly.
//! Regenerate it from the program IDL instead.
#![allow(
	clippy::doc_lazy_continuation,
	clippy::empty_line_after_doc_comments,
	clippy::too_many_arguments
)]

pub mod hello;
pub mod hello_no_msg;
pub mod hello_next;
pub mod require_eq;
pub mod require_neq;
pub mod require_gt;
pub mod require_gte;

pub use hello::HelloArgs;
pub use hello_no_msg::HelloNoMsgArgs;
pub use hello_next::HelloNextArgs;
pub use require_eq::RequireEqArgs;
pub use require_neq::RequireNeqArgs;
pub use require_gt::RequireGtArgs;
pub use require_gte::RequireGteArgs;

==== src/commands/require_eq.rs ====
//! This code was AUTOGENERATED by `pina_cli_renderer`.
//! Please DO NOT EDIT THIS FILE directly.
//! Regenerate it from the program IDL instead.
#![allow(
	clippy::doc_lazy_continuation,
	clippy::empty_line_after_doc_comments,
	clippy::too_many_arguments
)]

use clap::Args;

use crate::context::CliContext;
use crate::context::CliError;
use fixture_client::instructions::RequireEq;
use fixture_client::instructions::RequireEqInstructionData;

#[derive(Debug, Args)]
pub struct RequireEqArgs {
}

pub(crate) fn run(context: &CliContext, args: RequireEqArgs) -> Result<(), CliError> {
	let data = RequireEqInstructionData::new(|_data| {})
	.map_err(|_| CliError::InvalidData {
		message: "instruction data rejected the provided arguments".to_string(),
	})?;

	let accounts = RequireEq {
	};

	context.send(accounts.instruction(data))
}

==== src/commands/require_gt.rs ====
//! This code was AUTOGENERATED by `pina_cli_renderer`.
//! Please DO NOT EDIT THIS FILE directly.
//! Regenerate it from the program IDL instead.
#![allow(
	clippy::doc_lazy_continuation,
	clippy::empty_line_after_doc_comments,
	clippy::too_many_arguments
)]

use clap::Args;

use crate::context::CliContext;
use crate::context::CliError;
use fixture_client::instructions::RequireGt;
use fixture_client::instructions::RequireGtInstructionData;

#[derive(Debug, Args)]
pub struct RequireGtArgs {
}

pub(crate) fn run(context: &CliContext, args: RequireGtArgs) -> Result<(), CliError> {
	let data = RequireGtInstructionData::new(|_data| {})
	.map_err(|_| CliError::InvalidData {
		message: "instruction data rejected the provided arguments".to_string(),
	})?;

	let accounts = RequireGt {
	};

	context.send(accounts.instruction(data))
}

==== src/commands/require_gte.rs ====
//! This code was AUTOGENERATED by `pina_cli_renderer`.
//! Please DO NOT EDIT THIS FILE directly.
//! Regenerate it from the program IDL instead.
#![allow(
	clippy::doc_lazy_continuation,
	clippy::empty_line_after_doc_comments,
	clippy::too_many_arguments
)]

use clap::Args;

use crate::context::CliContext;
use crate::context::CliError;
use fixture_client::instructions::RequireGte;
use fixture_client::instructions::RequireGteInstructionData;

#[derive(Debug, Args)]
pub struct RequireGteArgs {
}

pub(crate) fn run(context: &CliContext, args: RequireGteArgs) -> Result<(), CliError> {
	let data = RequireGteInstructionData::new(|_data| {})
	.map_err(|_| CliError::InvalidData {
		message: "instruction data rejected the provided arguments".to_string(),
	})?;

	let accounts = RequireGte {
	};

	context.send(accounts.instruction(data))
}

==== src/commands/require_neq.rs ====
//! This code was AUTOGENERATED by `pina_cli_renderer`.
//! Please DO NOT EDIT THIS FILE directly.
//! Regenerate it from the program IDL instead.
#![allow(
	clippy::doc_lazy_continuation,
	clippy::empty_line_after_doc_comments,
	clippy::too_many_arguments
)]

use clap::Args;

use crate::context::CliContext;
use crate::context::CliError;
use fixture_client::instructions::RequireNeq;
use fixture_client::instructions::RequireNeqInstructionData;

#[derive(Debug, Args)]
pub struct RequireNeqArgs {
}

pub(crate) fn run(context: &CliContext, args: RequireNeqArgs) -> Result<(), CliError> {
	let data = RequireNeqInstructionData::new(|_data| {})
	.map_err(|_| CliError::InvalidData {
		message: "instruction data rejected the provided arguments".to_string(),
	})?;

	let accounts = RequireNeq {
	};

	context.send(accounts.instruction(data))
}

==== src/context.rs ====
//! This code was AUTOGENERATED by `pina_cli_renderer`.
//! Please DO NOT EDIT THIS FILE directly.
//! Regenerate it from the program IDL instead.
#![allow(
	clippy::doc_lazy_continuation,
	clippy::empty_line_after_doc_comments,
	clippy::too_many_arguments
)]

//! Shared runtime for the generated CLI: endpoint resolution, keypair loading,
//! transaction sending, and account fetching.

use std::path::PathBuf;

use solana_rpc_client::api::client_error::Error as ClientError;
use solana_rpc_client::rpc_client::RpcClient;
use solana_sdk::instruction::Instruction;
use solana_sdk::pubkey::ParsePubkeyError;
use solana_sdk::pubkey::Pubkey;
use solana_sdk::signature::Keypair;
use solana_sdk::signature::Signer;
use solana_sdk::signature::read_keypair_file;
use solana_sdk::transaction::Transaction;
use thiserror::Error;

const MAINNET_ENDPOINT: &str = "https://api.mainnet-beta.solana.com";
const DEVNET_ENDPOINT: &str = "https://api.devnet.solana.com";
const TESTNET_ENDPOINT: &str = "https://api.testnet.solana.com";
const LOCALNET_ENDPOINT: &str = "http://localhost:8899";

/// Errors surfaced by every generated command.
#[derive(Debug, Error)]
pub enum CliError {
	#[error("`{value}` is not a valid RPC endpoint; expected mainnet, devnet, testnet, localhost, or an http(s) URL")]
	InvalidEndpoint { value: String },

	#[error("plaintext `http://` endpoints are only allowed on localhost; use https for remote clusters")]
	InsecureEndpoint { value: String },

	#[error("`{flag}` must be a base58 public key: {source}")]
	InvalidPubkey { flag: String, source: ParsePubkeyError },

	#[error("`{flag}` must be valid base58: {source}")]
	InvalidBase58 {
		flag: String,
		source: bs58::decode::Error,
	},

	#[error("`{flag}` must hold exactly {expected} bytes, found {actual}")]
	InvalidByteLength {
		flag: String,
		expected: usize,
		actual: usize,
	},

	#[error("could not load payer keypair `{path}`: {message}")]
	Keypair { path: PathBuf, message: String },

	#[error("RPC request failed: {0}")]
	Rpc(#[from] ClientError),

	#[error("the transaction failed: {0}")]
	TransactionFailed(String),

	#[error("account `{address}` was not found")]
	AccountNotFound { address: String },

	#[error("account `{address}` belongs to `{owner}`, not the configured program")]
	AccountOwnerMismatch { address: String, owner: String },

	#[error("account `{address}` could not be decoded: {message}")]
	AccountDecode { address: String, message: String },

	#[error("instruction data is invalid: {message}")]
	InvalidData { message: String },

	#[error("derive `--address` explicitly or provide PDA seed `{seed}` for `{account}`")]
	MissingSeed { account: String, seed: String },
}

/// Shared configuration and RPC connection for one CLI invocation.
pub struct CliContext {
	pub rpc: RpcClient,
	pub payer: Keypair,
	pub program_address: Pubkey,
	pub simulate: bool,
	pub json: bool,
	cluster: &'static str,
}

impl CliContext {
	/// Build the context from the parsed global flags.
	pub fn new(
		url: &str,
		keypair: &str,
		program_address: Pubkey,
		simulate: bool,
		json: bool,
	) -> Result<Self, CliError> {
		let (endpoint, cluster) = resolve_endpoint(url)?;
		let payer = load_keypair(keypair)?;

		Ok(Self {
			rpc: RpcClient::new(endpoint),
			payer,
			program_address,
			simulate,
			json,
			cluster,
		})
	}

	/// The payer public key.
	#[must_use]
	pub fn payer_pubkey(&self) -> Pubkey {
		self.payer.pubkey()
	}

	/// Parse and validate a base58 public key flag.
	pub fn pubkey(flag: &str, value: &str) -> Result<Pubkey, CliError> {
		value
			.parse()
			.map_err(|source| CliError::InvalidPubkey {
				flag: flag.to_string(),
				source,
			})
	}

	/// Decode a capacity-bounded byte flag from base58.
	pub fn byte_vec(flag: &str, value: &str) -> Result<Vec<u8>, CliError> {
		bs58::decode(value)
			.into_vec()
			.map_err(|source| CliError::InvalidBase58 {
				flag: flag.to_string(),
				source,
			})
	}

	/// Decode an exact-length byte flag from base58.
	pub fn bytes<const N: usize>(flag: &str, value: &str) -> Result<[u8; N], CliError> {
		let decoded = bs58::decode(value)
			.into_vec()
			.map_err(|source| CliError::InvalidBase58 {
				flag: flag.to_string(),
				source,
			})?;

		decoded.try_into().map_err(|actual: Vec<u8>| {
			CliError::InvalidByteLength {
				flag: flag.to_string(),
				expected: N,
				actual: actual.len(),
			}
		})
	}

	/// Send or simulate one instruction, printing the result.
	pub fn send(&self, instruction: Instruction) -> Result<(), CliError> {
		let mut instruction = instruction;
		instruction.program_id = self.program_address;
		let blockhash = self.rpc.get_latest_blockhash()?;
		let transaction = Transaction::new_signed_with_payer(
			&[instruction],
			Some(&self.payer.pubkey()),
			&[&self.payer],
			blockhash,
		);

		if self.simulate {
			return self.simulate(&transaction);
		}

		let signature = self.rpc.send_and_confirm_transaction(&transaction)?.to_string();
		if self.json {
			println!("{{\"signature\":\"{signature}\"}}");
		} else {
			println!("Signature: {signature}");
			if !self.cluster.is_empty() {
				println!(
					"https://explorer.solana.com/tx/{signature}?cluster={}",
					self.cluster
				);
			}
		}
		Ok(())
	}

	fn simulate(&self, transaction: &Transaction) -> Result<(), CliError> {
		let simulation = self.rpc.simulate_transaction(transaction)?.value;
		let logs = simulation.logs.clone();
		let consumed = simulation.units_consumed;

		if self.json {
			println!(
				"{}",
				serde_json::json!({ "logs": logs, "unitsConsumed": consumed })
			);
		} else {
			for log in logs.iter().flatten() {
				println!("{log}");
			}
			if let Some(consumed) = consumed {
				println!("Consumed {consumed} compute units");
			}
		}

		if let Some(failure) = simulation.err {
			let logs = logs.unwrap_or_default().join("\n");
			return Err(CliError::TransactionFailed(format!("{failure}\n{logs}")));
		}
		Ok(())
	}

	/// Fetch one owned account, verifying its owner matches the program.
	pub fn fetch_account(&self, address: &Pubkey) -> Result<Vec<u8>, CliError> {
		let account = self.rpc.get_account(address)?;

		if account.owner != self.program_address {
			return Err(CliError::AccountOwnerMismatch {
				address: address.to_string(),
				owner: account.owner.to_string(),
			});
		}
		Ok(account.data)
	}
}

/// Resolve a cluster name or URL, rejecting plaintext remote endpoints.
///
/// # Errors
///
/// Returns an error for endpoints that are neither https nor localhost http.
pub fn resolve_endpoint(value: &str) -> Result<(String, &'static str), CliError> {
	let (endpoint, cluster): (&str, &str) = match value {
		"mainnet" | "mainnet-beta" => (MAINNET_ENDPOINT, ""),
		"devnet" => (DEVNET_ENDPOINT, "devnet"),
		"testnet" => (TESTNET_ENDPOINT, "testnet"),
		"localhost" | "localnet" => (LOCALNET_ENDPOINT, "custom"),
		custom => (custom, "custom"),
	};

	let lowercase = endpoint.to_ascii_lowercase();
	let is_local = lowercase.starts_with("http://localhost")
		|| lowercase.starts_with("http://127.0.0.1")
		|| lowercase.starts_with("http://[::1]");
	if !lowercase.starts_with("https://") && !(lowercase.starts_with("http://") && is_local) {
		return Err(CliError::InsecureEndpoint {
			value: value.to_string(),
		});
	}

	Ok((endpoint.to_string(), cluster))
}

fn load_keypair(path: &str) -> Result<Keypair, CliError> {
	let expanded = expand_home(path);
	read_keypair_file(&expanded).map_err(|error| CliError::Keypair {
		path: PathBuf::from(expanded),
		message: error.to_string(),
	})
}

fn expand_home(path: &str) -> String {
	let Some(rest) = path.strip_prefix("~/") else {
		return path.to_string();
	};
	match std::env::var("HOME") {
		Ok(home) if !home.is_empty() => format!("{home}/{rest}"),
		_ => path.to_string(),
	}
}

/// Map a custom program error code to its IDL name.
pub fn program_error_name(code: u32) -> Option<&'static str> {
	match code {
		6000 => Some("Hello"),
		6123 => Some("HelloNoMsg"),
		6124 => Some("HelloNext"),
		6125 => Some("HelloCustom"),
		6126 => Some("ValueMismatch"),
		6127 => Some("ValueMatch"),
		6128 => Some("ValueLess"),
		6129 => Some("ValueLessOrEqual"),
		_ => None,
	}
}

==== src/main.rs ====
//! This code was AUTOGENERATED by `pina_cli_renderer`.
//! Please DO NOT EDIT THIS FILE directly.
//! Regenerate it from the program IDL instead.
#![allow(
	clippy::doc_lazy_continuation,
	clippy::empty_line_after_doc_comments,
	clippy::too_many_arguments
)]

//! Generated CLI for the `customErrorsProgram` program.

mod commands;
mod context;
use clap::Parser;
use clap::Subcommand;
use context::CliContext;
use solana_sdk::pubkey::Pubkey;

/// Command-line interface for customErrorsProgram
#[derive(Debug, Parser)]
#[command(name = "custom-errors-program-cli", version = env!("CARGO_PKG_VERSION"), propagate_version = true)]
struct Cli {
	/// RPC endpoint: `mainnet`, `devnet`, `testnet`, `localhost`, or an https URL.
	#[arg(short = 'u', long, default_value = "devnet", env = "SOLANA_URL")]
	url: String,

	/// Payer keypair file in the standard Solana JSON byte-array format.
	#[arg(short = 'k', long, default_value = "~/.config/solana/id.json", env = "PINA_KEYPAIR")]
	keypair: String,

	/// Override the on-chain program address.
	#[arg(long)]
	program_id: Option<String>,

	/// Simulate the transaction and print its logs instead of sending.
	#[arg(long)]
	simulate: bool,

	/// Print machine-readable JSON output.
	#[arg(long)]
	json: bool,

	#[command(subcommand)]
	command: Command,
}

#[derive(Debug, Subcommand)]
enum Command {

	Hello(commands::HelloArgs),

	HelloNoMsg(commands::HelloNoMsgArgs),

	HelloNext(commands::HelloNextArgs),

	RequireEq(commands::RequireEqArgs),

	RequireNeq(commands::RequireNeqArgs),

	RequireGt(commands::RequireGtArgs),

	RequireGte(commands::RequireGteArgs),
}

fn main() {
	let cli = Cli::parse();
	if let Err(error) = run(cli) {
		eprintln!("error: {error}");
		std::process::exit(1);
	}
}

fn run(cli: Cli) -> Result<(), context::CliError> {
	let program_address = match &cli.program_id {
		Some(value) => CliContext::pubkey("--program-id", value)?,
		None => Pubkey::from_str_const("Fg6PaFpoGXkYsidMpWTK6W2BeZ7FEfcYkg476zPFsLnS"),
	};
	let context = CliContext::new(&cli.url, &cli.keypair, program_address, cli.simulate, cli.json)?;

	match cli.command {
		Command::Hello(args) => commands::hello::run(&context, args),
		Command::HelloNoMsg(args) => commands::hello_no_msg::run(&context, args),
		Command::HelloNext(args) => commands::hello_next::run(&context, args),
		Command::RequireEq(args) => commands::require_eq::run(&context, args),
		Command::RequireNeq(args) => commands::require_neq::run(&context, args),
		Command::RequireGt(args) => commands::require_gt::run(&context, args),
		Command::RequireGte(args) => commands::require_gte::run(&context, args),
	}
}
